	* updated the API to add_torrent_params turning all bools into flags of a flags field
	* added async_add_torrent() function to significantly improve performance when
	  adding many torrents
	* change peer_states to be a bitmask (bw_limit, bw_network, bw_disk)
	* changed semantics of send_buffer_watermark_factor to be specified as a percentage
	* add incoming_connection_alert for logging all successful incoming connections
	* feature to encrypt peer connections with a secret AES-256 key stored in .torrent file
	* deprecated compact storage allocation
	* close files in separate thread on systems where close() may block (Mac OS X for instance)
	* don't create all directories up front when adding torrents
	* support DHT scrape
	* added support for fadvise/F_RDADVISE for improved disk read performance
	* introduced pop_alerts() which pops the entire alert queue in a single call
	* support saving metadata in resume file, enable it by default for magnet links
	* support for receiving multi announce messages for local peer discovery
	* added session::listen_no_system_port flag to prevent libtorrent from ever binding the listen socket to port 0
	* added option to not recheck on missing or incomplete resume data
	* extended stats logging with statistics=on builds
	* added new session functions to more efficiently query torrent status
	* added alerts for added and removed torrents
	* expanded plugin interface to support session wide states
	* made the metadata block requesting algorithm more robust against hash check failures
	* support a separate option to use proxies for peers or not
	* pausing the session now also pauses checking torrents
	* moved alert queue size limit into session_settings
	* added support for DHT rss feeds (storing only)
	* added support for RSS feeds
	* fixed up some edge cases in DHT routing table and improved unit test of it
	* added error category and error codes for HTTP errors